--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -51,7 +51,7 @@ jobs:
           git clone --depth 1 https://github.com/nvim-treesitter/nvim-treesitter.git ${{ matrix.PLUGINS_HOME }}/nvim-treesitter
           git clone --depth 1 https://github.com/nvim-neotest/neotest.git ${{ matrix.PLUGINS_HOME }}/neotest
           git clone --depth 1 https://github.com/nvim-neotest/nvim-nio.git ${{ matrix.PLUGINS_HOME }}/nvim-nio
-          nvim --headless -c "TSInstallSync lua cpp" -c -q
+          nvim --headless -c "TSInstallSync lua cpp" -c q
       - name: Run unit tests
         run: |
           nvim --headless -c "PlenaryBustedDirectory tests/unit {sequential=true, timeout=5000}"
